--- a/drinkMenu.html
+++ b/drinkMenu.html
@@ -87,7 +87,6 @@
             }
             // ... thêm các category khác tương tự
         };
-        
 
         // Hàm cập nhật tiêu đề
         function updateTitle() {
@@ -171,7 +170,7 @@
 
     <main>
         <div class="menu-container">
-            <h1 id="drinkTitle">
+            <h1 id="drinkTitle" data-i18n="drinkMenu.title">
                 THỰC ĐƠN NƯỚC CHILLAX
               </h1>
             <div class="menu-view">
@@ -595,7 +594,6 @@
     <script src="https://cdn.jsdelivr.net/npm/lightbox2@2.11.3/dist/js/lightbox.min.js"></script>
     <script src="js/main.js" defer></script>
     <script src="js/include.js"></script>
-    <script src="js/menu.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             const menuToggle = document.querySelector('.menu-toggle');
