--- a/drinkMenu.html
+++ b/drinkMenu.html
@@ -170,7 +170,7 @@
 
     <main>
         <div class="menu-container">
-            <h1 id="drinkTitle" data-i18n="drinkMenu.title">
+            <h1 id="drinkTitle" data-i18n="">
                 THỰC ĐƠN NƯỚC CHILLAX
               </h1>
             <div class="menu-view">
