--- a/foodAsia.html
+++ b/foodAsia.html
@@ -74,7 +74,7 @@
     <!-- Banner end -->
     <main>
         <div class="menu-container">
-            <h1 data-i18n="asiaMenu.title">THỰC ĐƠN CHÂU Á CHILLAX</h1>
+            <h1 id="asiaTitle" data-i18n="">THỰC ĐƠN CHÂU Á CHILLAX</h1>
             <div class="menu-view">
                 <!-- Food 1  -->
                 <div data-aos="fade-up" data-aos-duration="1000" class="menu-item" data-category="appetizer">
@@ -232,7 +232,7 @@
                 </div>
                 <div data-aos="fade-up" data-aos-duration="1000" class="menu-item" data-category="shrimp">
                     <div class="menu-img">
-                        <img loading="lazy" src="images/Asia/Tôm chiên hoàng bào(Fake).jpg" alt="Tôm chiên hoàng bào"
+                        <img loading="lazy" src="images/Asia/Tôm chiên hoàng bào.JPG" alt="Tôm chiên hoàng bào"
                             class="zoom-image">
                     </div>
                     <div class="menu-info">
@@ -338,6 +338,7 @@
 
     <script src="js/main.js" defer></script>
     <script src="js/include.js"></script>
+    <script src="js/menu-asia.js"></script>
 </body>
 <!-- AOS Animate On Scroll -->
 <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
