--- a/foodEurope.html
+++ b/foodEurope.html
@@ -69,7 +69,7 @@
 
     <main>
         <div class="menu-container">
-            <h1 data-i18n="europeMenu.title">THỰC ĐƠN CHÂU ÂU CHILLAX</h1>
+            <h1 id="europeTitle" data-i18n="">THỰC ĐƠN CHÂU ÂU CHILLAX</h1>
             <div class="menu-view">
                 <!-- Food 1  -->
                 <div data-aos="fade-up" data-aos-duration="1000" class="menu-item" data-category="appetizer">
@@ -167,10 +167,10 @@
                 <!-- Food 5  -->
                 <div data-aos="fade-up" data-aos-duration="1000" class="menu-item" data-category="soup">
                     <div class="menu-img">
-                        <img loading="lazy" src="images/Europe/Súp cà chua.jpg" alt="Súp cà chua" class="zoom-image">
+                        <img loading="lazy" src="images/Europe/Súp bí đỏ.jpg" alt="Súp bí đỏ" class="zoom-image">
                     </div>
                     <div class="menu-info">
-                        <h2 data-i18n="europeMenu.supCaChua">SÚP CÀ CHUA</h2>
+                        <h2 data-i18n="europeMenu.supBiDo">SÚP Bí Đỏ</h2>
                         <h6 data-i18n="europeMenu.oneType" class="overlay">Một loại</h6>
                         <b>139.000 VND</b>
                     </div>
@@ -238,7 +238,7 @@
                 <!-- Food 8  -->
                 <div data-aos="fade-up" data-aos-duration="1000" class="menu-item" data-category="fish">
                     <div class="menu-img">
-                        <img loading="lazy" src="images/Europe/Cá hồi sốt cam(Fake).jpg" alt="Cá hồi sốt"
+                        <img loading="lazy" src="images/Europe/Cá hồi sốt chanh dây(Fake).jpg" alt="Cá hồi sốt"
                             class="zoom-image">
                     </div>
                     <div class="menu-info">
@@ -249,7 +249,7 @@
                 </div>
                 <div data-aos="fade-up" data-aos-duration="1000" class="menu-item" data-category="fish">
                     <div class="menu-img">
-                        <img loading="lazy" src="images/Europe/Cá hồi sốt chanh dây(Fake).jpg"
+                        <img loading="lazy" src="images/Europe/Cá hồi sốt chanh dây.JPG"
                             alt="Cá hồi sốt chanh dây" class="zoom-image">
                     </div>
                     <div class="menu-info">
@@ -334,6 +334,7 @@
 
     <script src="js/main.js" defer></script>
     <script src="js/include.js"></script>
+    <script src="js/menu-europe.js"></script>
 </body>
 <!-- AOS Animate On Scroll -->
 <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
