--- a/setTable.html
+++ b/setTable.html
@@ -129,6 +129,7 @@
                                 <option data-i18n="select-car-5" value="Xe khách 29 chỗ">Xe khách 29 chỗ</option>
                                 <option data-i18n="select-car-6" value="Xe khách 35 chỗ">Xe khách 35 chỗ</option>
                                 <option data-i18n="select-car-7" value="Xe khách 45 chỗ">Xe khách 45 chỗ</option>
+                                <option data-i18n="Other-vehicles" value="Xe khác">Xe khác</option>
                             </select>
                         </div>
                     </div>
