--- a/footer.html
+++ b/footer.html
@@ -26,6 +26,11 @@
                         class="fab fa-tiktok icon-tt"></i></a>
                 <a href="https://www.youtube.com/@CHILLAXRESTAURANT290" target="_blank"><i
                         class="fab fa-youtube icon-ytb"></i></a>
+
+                <a href="#" target="_blank"><i class="fab fa-whatsapp icon-whatapp"></i></a>
+                <a href="#" target="_blank"><i class="fab fa-viber icon-viber"></i></a>
+                <a href="#" target="_blank"><img class="icon-zalo" src="images/logo/Icon_of_Zalo.svg.webp" alt="" srcset=""></a>
+
             </div>
         </div>
     </div>
