--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description"
         content="Liên hệ với Chillax Eatery & Hangout  – gửi góp ý, phản hồi về dịch vụ, món ăn hoặc đặt bàn tại Hội An. Chúng tôi luôn trân trọng mọi ý kiến từ quý khách.">
-    <meta name="keywords" content="liên hệ, feedback, góp ý, Chillax Eatery & Hangout, nhà hàng chillax, ẩm thực fusion, Hội An, contact, Chillax restaurant">
+    <meta name="keywords"
+        content="liên hệ, feedback, góp ý, Chillax Eatery & Hangout, nhà hàng chillax, ẩm thực fusion, Hội An, contact, Chillax restaurant">
 
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; 
                img-src 'self' data: https:;
@@ -34,13 +35,14 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/contact.css">
-    
+
     <!-- Open Graph -->
-    <meta property="og:title" content="Liên Hệ | Chillax Eatery Hangout Hội An"/>
-    <meta property="og:description" content="Gửi liên hệ, góp ý, phản hồi về dịch vụ và món ăn tại Chillax Eatery & Hangout Hội An. Đội ngũ luôn sẵn sàng lắng nghe quý khách!"/>
-    <meta property="og:image" content="https://chillax.com.vn/images/bg-banner/bg-contact.jpg"/>
-    <meta property="og:url" content="https://chillax.com.vn/contact.html"/>
-    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Liên Hệ | Chillax Eatery Hangout Hội An" />
+    <meta property="og:description"
+        content="Gửi liên hệ, góp ý, phản hồi về dịch vụ và món ăn tại Chillax Eatery & Hangout Hội An. Đội ngũ luôn sẵn sàng lắng nghe quý khách!" />
+    <meta property="og:image" content="https://chillax.com.vn/images/bg-banner/bg-contact.jpg" />
+    <meta property="og:url" content="https://chillax.com.vn/contact.html" />
+    <meta property="og:type" content="website" />
 
     <!-- Rreload -->
     <link rel="preload" href="images/logo/logo-text.png" as="image">
@@ -53,7 +55,7 @@
 
     <!-- Toastify JS -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-    
+
     <!-- Schema.org ContactPage -->
     <script type="application/ld+json">
     {
@@ -84,7 +86,8 @@
         <div class="settable-container" style="margin-top: 85px;">
             <div data-aos="fade-up" data-aos-duration="1000" class="settable-text">
                 <h1 data-i18n="title-settable1">LIÊN HỆ VỚI CHILLAX</h1>
-                <h5 data-i18n="text-settable1">Chillax Eatery & Hangout luôn trân trọng ý kiến của quý khách – nguồn cảm hứng để Chillax hoàn thiện và phát triển hơn mỗi ngày.</h5>
+                <h5 data-i18n="text-settable1">Chillax Eatery & Hangout luôn trân trọng ý kiến của quý khách – nguồn cảm
+                    hứng để Chillax hoàn thiện và phát triển hơn mỗi ngày.</h5>
                 <hr>
                 <img src="images/bg-banner/bg-contact.jpg" alt="Ảnh đẹp Chillax" srcset="">
             </div>
