--- a/foodEurope.html
+++ b/foodEurope.html
@@ -6,8 +6,10 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="Khám phá thực đơn món Âu tại Chillax Eatery & Hangout: burger bò, pizza, salad, mì Ý, soup, steak bò, vịt sốt cam... Chuẩn Âu, giá tốt, view đồng lúa ở Hội An.">
-    <meta name="keywords" content="menu món âu, thực đơn châu âu, burger bò, pizza, salad, mì ý, steak, vịt sốt cam, nhà hàng Chillax Eatery Hangout, Hội An, chillax restaurant">
+    <meta name="description"
+        content="Khám phá thực đơn món Âu tại Chillax Eatery & Hangout: burger bò, pizza, salad, mì Ý, soup, steak bò, vịt sốt cam... Chuẩn Âu, giá tốt, view đồng lúa ở Hội An.">
+    <meta name="keywords"
+        content="menu món âu, thực đơn châu âu, burger bò, pizza, salad, mì ý, steak, vịt sốt cam, nhà hàng Chillax Eatery Hangout, Hội An, chillax restaurant">
     <link rel="canonical" href="https://chillax.com.vn/menuEurope.html" />
 
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; 
@@ -18,11 +20,12 @@
                font-src 'self' https:;
                connect-src 'self' https:;">
 
-    <meta property="og:title" content="Menu Món Âu | Chillax Eatery Hangout Hội An"/>
-    <meta property="og:description" content="Thực đơn món Âu đa dạng: burger, pizza, salad, steak, soup... tại Chillax Eatery Hangout, view đồng lúa Hội An. Đặt bàn ngay!"/>
-    <meta property="og:image" content="https://chillax.com.vn/images/Europe/Pizza%20h%E1%BA%A3i%20s%E1%BA%A3n.jpg"/>
-    <meta property="og:url" content="https://chillax.com.vn/menuEurope.html"/>
-    <meta property="og:type" content="article"/>
+    <meta property="og:title" content="Menu Món Âu | Chillax Eatery Hangout Hội An" />
+    <meta property="og:description"
+        content="Thực đơn món Âu đa dạng: burger, pizza, salad, steak, soup... tại Chillax Eatery Hangout, view đồng lúa Hội An. Đặt bàn ngay!" />
+    <meta property="og:image" content="https://chillax.com.vn/images/Europe/Pizza%20h%E1%BA%A3i%20s%E1%BA%A3n.jpg" />
+    <meta property="og:url" content="https://chillax.com.vn/menuEurope.html" />
+    <meta property="og:type" content="article" />
     <link rel="icon" href="images/logo/logo-text.png" type="image/png">
 
     <link href="https://cdn.jsdelivr.net/npm/lightbox2@2.11.3/dist/css/lightbox.min.css" rel="stylesheet">
@@ -43,7 +46,7 @@
 
     <!-- AOS -->
     <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
-    
+
     <!-- Schema.org Menu -->
     <script type="application/ld+json">
     {
@@ -249,8 +252,8 @@
                 </div>
                 <div data-aos="fade-up" data-aos-duration="1000" class="menu-item" data-category="fish">
                     <div class="menu-img">
-                        <img loading="lazy" src="images/Europe/Cá hồi sốt chanh dây.JPG"
-                            alt="Cá hồi sốt chanh dây" class="zoom-image">
+                        <img loading="lazy" src="images/Europe/Cá hồi sốt chanh dây.JPG" alt="Cá hồi sốt chanh dây"
+                            class="zoom-image">
                     </div>
                     <div class="menu-info">
                         <h2 data-i18n="europeMenu.caHoiSotChanhDay">CÁ HỒI SỐT CHANH DÂY</h2>
