--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <!-- Header -->
 <header>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg" id="mainNavbar">
+    <nav class="navbar navbar-expand-md" id="mainNavbar">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html"><img loading="lazy" src="images/logo/Logo-main.png"
                     alt="Logo Chillax Eatery & Hangout"></a>
