--- a/photospot.html
+++ b/photospot.html
@@ -8,7 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description"
         content="Bộ sưu tập hình ảnh không gian, cánh đồng lúa và những khoảnh khắc đẹp tại Chillax Eatery Hangout Hội An. Khám phá Chillax qua những bức ảnh ấn tượng.">
-    <meta name="keywords" content="ảnh Chillax, gallery, không gian nhà hàng, cánh đồng lúa, con người, bộ sưu tập hình ảnh, Chillax Eatery Hangout, Hội An, nhà hàng chillax, chillax restaurant">
+    <meta name="keywords"
+        content="ảnh Chillax, gallery, không gian nhà hàng, cánh đồng lúa, con người, bộ sưu tập hình ảnh, Chillax Eatery Hangout, Hội An, nhà hàng chillax, chillax restaurant">
 
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; 
                frame-src https://www.youtube.com https://maps.google.com https:;
@@ -33,21 +34,22 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/photospot.css">
-    
-     <!-- Open Graph -->
-    <meta property="og:title" content="Bộ Sưu Tập Hình Ảnh | Chillax Eatery Hangout Hội An"/>
-    <meta property="og:description" content="Bộ sưu tập hình ảnh không gian, cánh đồng lúa và những khoảnh khắc đẹp tại Chillax Eatery Hangout Hội An. Khám phá Chillax qua những bức ảnh ấn tượng."/>
-    <meta property="og:image" content="https://chillax.com.vn/images/photoSpot/pt-1.jpg"/>
-    <meta property="og:url" content="https://chillax.com.vn/photospot.html"/>
-    <meta property="og:type" content="website"/>
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Bộ Sưu Tập Hình Ảnh | Chillax Eatery Hangout Hội An" />
+    <meta property="og:description"
+        content="Bộ sưu tập hình ảnh không gian, cánh đồng lúa và những khoảnh khắc đẹp tại Chillax Eatery Hangout Hội An. Khám phá Chillax qua những bức ảnh ấn tượng." />
+    <meta property="og:image" content="https://chillax.com.vn/images/photoSpot/pt-1.jpg" />
+    <meta property="og:url" content="https://chillax.com.vn/photospot.html" />
+    <meta property="og:type" content="website" />
 
     <!-- Rreload -->
     <link rel="preload" href="images/logo/logo-text.png" as="image">
 
     <!-- AOS -->
     <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
-    
-     <!-- Schema.org ImageGallery -->
+
+    <!-- Schema.org ImageGallery -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
