--- a/foodAsia.html
+++ b/foodAsia.html
@@ -8,7 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description"
         content="Khám phá thực đơn các món Á tại Chillax Eatery & Hangout: Hội An nếm, bánh mì trứng, mì xào, cơm áp chảo, soup, salad, gỏi, tôm, mực, cá, tráng miệng... Đậm đà hương vị châu Á giữa cánh đồng lúa Hội An.">
-    <meta name="keywords" content="menu món á, thực đơn châu á, món việt, món nhật, món hoa, cơm, mì xào, gỏi, soup, nhà hàng Chillax, Hội An, chillax restaurant">
+    <meta name="keywords"
+        content="menu món á, thực đơn châu á, món việt, món nhật, món hoa, cơm, mì xào, gỏi, soup, nhà hàng Chillax, Hội An, chillax restaurant">
     <link rel="canonical" href="https://chillax.com.vn/menuAsia.html" />
 
 
@@ -20,11 +21,12 @@
                font-src 'self' https:;
                connect-src 'self' https:;">
 
-    <meta property="og:title" content="Menu Món Á | Chillax Eatery Hangout Hội An"/>
-    <meta property="og:description" content="Thực đơn món Á: Hội An nếm, mì xào, cơm áp chảo, soup, gỏi, tôm, cá, mực, tráng miệng... tại Chillax Eatery Hangout Hội An."/>
-    <meta property="og:image" content="https://chillax.com.vn/images/Asia/Hội%20an%20nếm.JPG"/>
-    <meta property="og:url" content="https://chillax.com.vn/menuAsia.html"/>
-    <meta property="og:type" content="article"/>
+    <meta property="og:title" content="Menu Món Á | Chillax Eatery Hangout Hội An" />
+    <meta property="og:description"
+        content="Thực đơn món Á: Hội An nếm, mì xào, cơm áp chảo, soup, gỏi, tôm, cá, mực, tráng miệng... tại Chillax Eatery Hangout Hội An." />
+    <meta property="og:image" content="https://chillax.com.vn/images/Asia/Hội%20an%20nếm.JPG" />
+    <meta property="og:url" content="https://chillax.com.vn/menuAsia.html" />
+    <meta property="og:type" content="article" />
     <link rel="icon" href="images/logo/logo-text.png" type="image/png">
 
     <link href="https://cdn.jsdelivr.net/npm/lightbox2@2.11.3/dist/css/lightbox.min.css" rel="stylesheet">
@@ -45,7 +47,7 @@
 
     <!-- AOS -->
     <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
-    
+
     <!-- Schema.org Menu -->
     <script type="application/ld+json">
     {
@@ -62,7 +64,7 @@
       ]
     }
     </script>
-    
+
 </head>
 
 <body>
