--- a/footer.html
+++ b/footer.html
@@ -14,22 +14,24 @@
             <p><i class="fas fa-map-marker-alt icon-location"></i> Tổ 10, khối Thanh Tây, Cẩm Châu, Hội An, Quảng
                 Nam, Việt Nam</p>
             <p><i class="fas fa-phone-alt icon-phone"></i> (+84) 379.700.700 </p>
-            <p><i class="fas fa-envelope icon-mail"></i> sale@chicchillax.com</p>
+            <p><i class="fas fa-envelope icon-mail"></i> Sales@Chillax.com.vn & sale@chicchillax.com</p>
             <p><i class="fa fa-briefcase icon-bag" aria-hidden="true"></i> Mon - Sat / Thứ 2 - Thứ 7 | 7:30 - 21:00
             </p>
             <div class="social-network">
-                <a href="https://www.facebook.com/ChicChillax/" target="_blank"><i
+                <a href="https://www.facebook.com/ChicChillax/" rel="noopener noreferrer" target="_blank"><i
                         class="fab fa-facebook-f icon-fb"></i></a>
-                <a href="https://www.instagram.com/chillaxeateryhangout/" target="_blank"><i
+                <a href="https://www.instagram.com/chillaxeateryhangout/" rel="noopener noreferrer" target="_blank"><i
                         class="fab fa-instagram icon-ins"></i></a>
-                <a href="https://www.tiktok.com/@chillax_eateryhangout" target="_blank"><i
+                <a href="https://www.tiktok.com/@chillax_eateryhangout" rel="noopener noreferrer" target="_blank"><i
                         class="fab fa-tiktok icon-tt"></i></a>
-                <a href="https://www.youtube.com/@CHILLAXRESTAURANT290" target="_blank"><i
+                <a href="https://www.youtube.com/@CHILLAXRESTAURANT290" rel="noopener noreferrer" target="_blank"><i
                         class="fab fa-youtube icon-ytb"></i></a>
-
-                <a href="#" target="_blank"><i class="fab fa-whatsapp icon-whatapp"></i></a>
-                <a href="#" target="_blank"><i class="fab fa-viber icon-viber"></i></a>
-                <a href="#" target="_blank"><img class="icon-zalo" src="images/logo/Icon_of_Zalo.svg.webp" alt="" srcset=""></a>
+                <a href="https://wa.me/84379700700" rel="noopener noreferrer" target="_blank"><i
+                        class="fab fa-whatsapp icon-whatapp"></i></a>
+                <a href="viber://chat?number=8479700700" rel="noopener noreferrer" target="_blank"><i
+                        class="fab fa-viber icon-viber"></i></a>
+                <a href="https://zalo.me/0379700700" rel="noopener noreferrer" target="_blank"><img class="icon-zalo"
+                        src="images/logo/Icon_of_Zalo.svg.webp" alt="" srcset=""></a>
 
             </div>
         </div>
@@ -37,7 +39,8 @@
     <div class="ft-author">
         <hr>
         <p>
-            Copyright &copy; Chillax Eatery & Hangout &bull; Edited by <a target="_blank" href="#">Chillax Eatery &
+            Copyright &copy; Chillax Eatery & Hangout &bull; Edited by <a target="_blank" rel="noopener noreferrer"
+                href="https://www.facebook.com/ChicChillax/">Chillax Eatery &
                 Hangout</a>
         </p>
     </div>
