--- a/setTable.html
+++ b/setTable.html
@@ -8,7 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description"
         content="Đặt bàn tại Chillax Eatery & Hangout để tận hưởng ẩm thực fusion giữa cánh đồng lúa thanh bình. Đặt chỗ trước để có trải nghiệm tốt nhất tại Hội An.">
-    <meta name="keywords" content="đặt bàn, booking, chillax restaurant, nhà hàng chillax, ẩm thực fusion, đồng lúa, Hội An, Chillax Eatery Hangout">
+    <meta name="keywords"
+        content="đặt bàn, booking, chillax restaurant, nhà hàng chillax, ẩm thực fusion, đồng lúa, Hội An, Chillax Eatery Hangout">
 
     <meta http-equiv="Content-Security-Policy" content="default-src 'self';
                frame-src https://www.youtube.com https://maps.google.com https:;
