--- a/footer.html
+++ b/footer.html
@@ -28,7 +28,7 @@
                         class="fab fa-youtube icon-ytb"></i></a>
                 <a href="https://wa.me/84379700700" rel="noopener noreferrer" target="_blank"><i
                         class="fab fa-whatsapp icon-whatapp"></i></a>
-                <a href="viber://chat?number=8479700700" rel="noopener noreferrer" target="_blank"><i
+                <a href="viber://chat?number=%8479700700" rel="noopener noreferrer" target="_blank"><i
                         class="fab fa-viber icon-viber"></i></a>
                 <a href="https://zalo.me/0379700700" rel="noopener noreferrer" target="_blank"><img class="icon-zalo"
                         src="images/logo/Icon_of_Zalo.svg.webp" alt="" srcset=""></a>
