--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                     </div>
                     <div class="form-row">
                         <div class="form-group">
-                            <label for="vehicle" data-i18n="label-vehicle">Loại xe:</label>
+                            <label for="vehicle" data-i18n="label-vehicle">Phương tiện đến nhà hàng:</label>
                             <select id="vehicle" name="vehicle" required>
                                 <option data-i18n="select-car" value="">-- Chọn loại xe --</option>
                                 <option data-i18n="select-car-1" value="Xe máy">Xe máy</option>
@@ -360,9 +360,9 @@
                     </div>
 
                     <div class="form-row-full">
-                        <label for="message" data-i18n="label-message">Các yêu cầu:</label>
+                        <label for="message" data-i18n="label-message">Các yêu cầu khác:</label>
                         <textarea id="myInput" name="message" rows="4"
-                            placeholder="Ví dụ: Yêu cầu chỗ ngồi ngoài trời, món ăn dị ứng, kiêng cử..."></textarea>
+                            placeholder="Ví dụ: Yêu cầu chỗ ngồi ngoài trời, món ăn kiêng ..."></textarea>
                     </div>
 
                     <button type="submit" data-i18n="btn-submit">Gửi đặt bàn</button>
